--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -65,17 +65,24 @@ jobs:
           ngrok config add-authtoken "$NGROK_AUTH_TOKEN"
 
           # ----------------------
-          # Stop any existing Docker container using port 7860
+          # Stop & remove any existing container named 'attendance-app'
+          # ----------------------
+          if sudo docker ps -a --format '{{.Names}}' | grep -q '^attendance-app$'; then
+            sudo docker rm -f attendance-app || true
+          fi
+
+          # ----------------------
+          # Stop any container using port 7860
           # ----------------------
           CONTAINER_ID=$(sudo docker ps -q --filter "publish=$EXTERNAL_PORT")
           if [ -n "$CONTAINER_ID" ]; then
             sudo docker rm -f $CONTAINER_ID
           fi
 
-          # Kill existing ngrok processes
+          # ----------------------
+          # Kill ngrok processes & free port
+          # ----------------------
           sudo pkill -f 'ngrok http' || true
-
-          # Free port 7860 just in case
           sudo fuser -k $EXTERNAL_PORT/tcp || true
 
           # ----------------------
@@ -87,14 +94,14 @@ jobs:
           cd "$APP_DIR"
 
           # ----------------------
-          # Create .env file (variable expansion fixed)
+          # Create .env file
           # ----------------------
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY=$GOOGLE_API_KEY
           ENV_EOF
 
           # ----------------------
-          # Build and run Docker container (Docker tag fixed)
+          # Build and run Docker container
           # ----------------------
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t "$IMAGE_TAG" "$APP_DIR"
